# messy

./: .gitignore  404.html  Dockerfile  Dockerfile.power  README.md  custom_sourceme.sh  index.html  mkdocs.yaml  requirements.txt  run-cheshire.sh
.github/workflows/: docs.yml
Simulation_v2/: .gitignore  Makefile  efuse_preload.data  gvsoc_config.json
Simulation_v2/code/: six_instructions_example.txt
Simulation_v2/codegen/: codegen.py  codegen_func.py  easy.json  parallel.json  thesis.json
Simulation_v2/inc/: air_quality_sensor_functional.h  air_quality_sensor_power.h  air_quality_thermal.h  battery.h  battery_char.h  battery_converter.h  battery_peukert.h  battery_voc.h  config.h  config_converter_battery.h  config_converter_pv.h  config_pv.h  converter_pv.h  core.h  core_power.h  load_converter.h  lut.h  methane_sensor_functional.h  methane_sensor_power.h  mic_click_sensor_functional.h  mic_click_sensor_power.h  pv_panel.h  rf_functional.h  rf_power.h  sys_functional_bus.h  sys_power_bus.h  temperature_sensor_functional.h  temperature_sensor_power.h
Simulation_v2/input_files/: gmonths.txt  gmonths_raw.txt
Simulation_v2/src/: air_quality_sensor_functional.cpp  air_quality_sensor_power.cpp  air_quality_thermal.cpp  battery_converter.cpp  battery_peukert.cpp  (+18 more)
adapter/: index.html
build-gap-sdk/: index.html
codegen/: index.html
communication-example/: index.html
converters/: index.html
core/: index.html
custom-code-gap-sdk/: index.html
debugging/: index.html
docker/: .bashrc  Dockerfile.gap9  Dockerfile.openfr  Dockerfile.openup  build_open.sh  entrypoint.sh  index.html
docs/: build-gap-sdk.md  codegen.md  communication-example.md  converters.md  core.md  custom-code-gap-sdk.md  debugging.md  docker.md  explanation.md  flow.md  functional-bus.md  getting-started.md  harvesters.md  hello-world.md  how-to-build-docs.md  index.md  ipxact-parsing.md  ipxact.md  lut.md  messy.md  periodic-sensor.md  power-bus.md  resolution.md  sensors.md  simulator.md  timing.md  tracing.md  what-is-messy.md
examples/: .gitignore
examples/helloworld/: CMakeLists.txt  README.rst  gaptest.yml  helloworld.c
explanation/: index.html
flow/: index.html
functional-bus/: index.html
getting-started/: index.html
harvesters/: index.html
hello-world/: index.html
how-to-build-docs/: index.html
ipxact/: index.html
ipxact-parsing/: index.html
lut/: index.html
messy/: .gitignore  Makefile  Makefile.gap9  Makefile.open  index.html  messy.py
periodic-sensor/: index.html
power-bus/: index.html
resolution/: index.html
search/: search_index.json
sensors/: index.html
simulator/: index.html
simulink/: messy_double_sensors.slx  messy_pv.slx  messy_single_sensor.slx
timing/: index.html
tracing/: index.html
what-is-messy/: index.html
(+186 files in other folders)
